# homework

./: README.md  main.py  practic.py  pyproject.toml
project_name/: README.md  pyproject.toml
src/: .env.example  Utils.py  decorators.py  external_api.py  generators.py  masks.py  primer.py  processing.py  read_to_csv.py  read_to_exel.py  rr.py  widget.py
tests/: conftest.py  generators.py  test_decorators.py  test_external.py  test_generators.py  test_masks.py  test_processing.py  test_read_to_csv.py  test_read_to_exel.py  test_widget.py
