[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya.piltyay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pandas-stubs = "^2.2.3.241126"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
